# advent_of_code_2024

./: .gitignore  pyproject.toml
src/advent_of_code_2024/: day_.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py
tests/: _test_day_.py  test_day_1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py
