[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-2024"
description = "Code to solve Advent Of Code 2024"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "jurgenwigg", email = "jurgenwigg@protonmail.com" }]
dependencies = []
dynamic = ["version"]
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
[tool.setuptools.dynamic]

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "tox", "pytest"]
test = ["pytest", "pytest-cov", "black", "pylint", "tox"]
build = ["build"]
